--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top shadow">
       <div class="container">
         <div class="navbar-brand">
           <img src="Budget Better Logo.png" height="42px" width="42px" />
@@ -32,16 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a>
+              <a class="nav-link btn-lg" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="signin.html">Sign Up</a>
+              <a class="nav-link btn-lg" href="signin.html">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link btn-lg" href="contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link btn-lg" href="about.html">About</a>
             </li>
           </ul>
         </div>
@@ -163,21 +163,8 @@
       </div>
     </div>
 
-<!--about us -->
-<div class="container-fluid">
-    <div class="col-lg-12 text-center">
-      <section class=" bg-primary container-fluid" id="about">
-        <h1> About Us</h1>
-        <p> The founder of Budget Better is Daniela Martinez. </p>
-      </section>
-    </div>
-  
-</div>
-
-
-
     <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-5 bg-dark shadow">
     <div class="container">
       <div class="d-flex justify-content-center">
       <i class="fab fa-facebook-f fa-2x" style="color: white; margin-right: 8px;"></i>  
