--- a/user.html
+++ b/user.html
@@ -32,13 +32,13 @@
                   </a>
                
                 <li class="nav-item">
-                  <a class="nav-link" href="">Account</a>
+                  <a class="nav-link btn-lg" href="">Account</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html"  id="logout">Log out</a>
+                  <a class="nav-link btn-lg" href="index.html"  id="logout">Log out</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link btn-lg" href="contact.html">Contact Us</a>
                 </li>
                 
               </ul>
@@ -121,5 +121,5 @@
 </script>
 
 
-<script src="user.js"></script>
+<script src="main.js"></script>
 </html>
