--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
                                     <li data-menuanchor="slide01" class="active"><a href="#slide01"><strong>Home</strong></a></li>
                                     <li ><a href="login.html"><strong>Log In </strong></a></li>
-                                    <li ><a href="html/signin.html"><strong>Sign Up </strong></a></li>
+                                    <li ><a href="signup.html"><strong>Sign Up </strong></a></li>
                                     <li data-menuanchor="slide02"><a href="#slide02"><strong>Services</strong></a></li>
                                     <li data-menuanchor="slide03"><a href="#slide03"><strong>Our Team</strong></a></li>
                                     <li data-menuanchor="slide04"><a href="#slide04"><strong>Testimonials</strong></a></li>
